--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/AloneSpace/arsa-prompt-offical#readme",
     "dependencies": {
         "express": "^4.17.1",
+        "firebase": "^8.8.0",
         "nodemon": "^2.0.12"
     }
 }
