--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^0.21.1",
         "express": "^4.17.1",
         "firebase": "^8.8.0",
+        "firebase-admin": "^9.11.0",
         "nodemon": "^2.0.12"
     }
 }
