--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/AloneSpace/arsa-prompt-offical#readme",
     "dependencies": {
         "axios": "^0.21.1",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "firebase": "^8.8.0",
         "firebase-admin": "^9.11.0",
