+ Change to ready for production

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon server.js",
-        "start": "node server.js"
+        "dev": "NODE_ENV=development nodemon server.js",
+        "start": "NODE_ENV=production node server.js"
     },
     "repository": {
         "type": "git",
